--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "npm run build && ./scripts/deploy.sh"
+    "deploy": "npm run build && /scripts/deploy.sh"
   },
   "eslintConfig": {
     "extends": [
